	modules are ignored during restore. The restore can now be performed in
        such case.
	* src/web/ejabberd_web_admin.erl: Likewise.
	* src/ejabberd_admin.erl: Code refactoring. Common Mnesia database
	restore function.

	* src/ejabberd_ctl.erl: Now prints a user-friendly when trying to
	restore a backup from a non-existent file.
	
2006-05-01  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_ctl.erl: Unknown tables or tables from now unused
	modules are ignored during restore. The restore can now be performed in
        such case.

2006-04-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.hrl: release 1.1.1
	* doc/version.tex: Likewise
	* doc/guide.tex: Likewise

2006-04-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl.erl: Bugfix: anonymous authentication was always
	enabled

2006-04-27  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_ctl.erl: The status now only returns "started" if
	ejabberd is started and ready to accept requests.

2006-04-24  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Added a documentation for max_stanza_size option

2006-04-24  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.hrl: Updated for version 1.1.0.

2006-04-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/configure: Removed '==' bashism (thanks to Magnus Henoch)
	* src/aclocal.m4: Likewise

	* src/ejabberd_c2s.erl: Resend messages when leaving negative
	presence state (thanks to Magnus Henoch)

2006-04-23  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/fr.msg: Updated
	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak)
	* src/ejabberd_sm.erl: Now delivering messages to all resources with
	max equal priority when this priority is non-negative.

	* src/guide.tex: Added documentation for native database configuration.

2006-04-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pt-br.msg: Updated (thanks to Lucius Curado)
